# inotify-cpp

./: CMakeLists.txt
example/: main.cpp
src/: CMakeLists.txt  package.xml
src/cmake/: inotify-cppConfig.cmake.in  inotify-filesystem-adapterConfig.cmake.in
